Fixed some of the Sonar critical issues