@@ -19,7 +19,9 @@
  */
 package org.apache.directory.fortress.core.util.time;
 
+
 import java.util.GregorianCalendar;
+
 
 /**
  * Utility class to convert current time/date into internal format, {@link Time}, used for {@link Constraint} checks {@link CUtil#validateConstraints(org.apache.directory.fortress.core.rbac.Session, CUtil.ConstraintType, boolean)}.
@@ -39,36 +41,39 @@ public class TUtil
     {
         Time time = new Time();
         GregorianCalendar gc = new GregorianCalendar();
-        String szMinute = "" + gc.get(GregorianCalendar.MINUTE);
-        String szHour = "" + gc.get(GregorianCalendar.HOUR_OF_DAY);
+        String szMinute = "" + gc.get( GregorianCalendar.MINUTE );
+        String szHour = "" + gc.get( GregorianCalendar.HOUR_OF_DAY );
 
-        time.day = "" + gc.get(GregorianCalendar.DAY_OF_WEEK);
-        String szDay = "" + gc.get(GregorianCalendar.DAY_OF_MONTH);
-        int month = gc.get(GregorianCalendar.MONTH);
-        String szMonth = "" + (month + 1);
-        String szYear = "" + gc.get(GregorianCalendar.YEAR);
+        time.day = "" + gc.get( GregorianCalendar.DAY_OF_WEEK );
+        String szDay = "" + gc.get( GregorianCalendar.DAY_OF_MONTH );
+        int month = gc.get( GregorianCalendar.MONTH );
+        String szMonth = "" + ( month + 1 );
+        String szYear = "" + gc.get( GregorianCalendar.YEAR );
 
-        if (szMinute.length() == 1)
+        if ( szMinute.length() == 1 )
         {
             szMinute = "0" + szMinute;
         }
-        if (szHour.length() == 1)
+
+        if ( szHour.length() == 1 )
         {
             szHour = "0" + szHour;
         }
-        if (szDay.length() == 1)
+
+        if ( szDay.length() == 1 )
         {
             szDay = "0" + szDay;
         }
-        if (szMonth.length() == 1)
+
+        if ( szMonth.length() == 1 )
         {
             szMonth = "0" + szMonth;
         }
+
         String szCurrentTime = szHour + szMinute;
 
-        time.currentTime = new Integer(szCurrentTime);
+        time.currentTime = Integer.valueOf( szCurrentTime );
         time.date = szYear + szMonth + szDay;
         return time;
     }
 }
-
